# coco-search

./: .env.example  .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  README.md  cocosearch.yaml  dev-setup.sh  docker-compose.yml  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.claude/skills/cocosearch/: SKILL.md
.gitea/workflows/: ci.yaml
.github/: FUNDING.yml
.github/workflows/: ci.yaml  release.yaml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  v1.1-MILESTONE-AUDIT.md
.planning/milestones/: v1-MILESTONE-AUDIT.md  v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md  v1.1-REQUIREMENTS.md  v1.1-ROADMAP.md  v1.10-MILESTONE-AUDIT.md  v1.10-REQUIREMENTS.md  v1.10-ROADMAP.md  v1.2-MILESTONE-AUDIT.md  v1.2-REQUIREMENTS.md  v1.2-ROADMAP.md  v1.3-REQUIREMENTS.md  v1.3-ROADMAP.md  v1.4-MILESTONE-AUDIT.md  v1.4-REQUIREMENTS.md  v1.4-ROADMAP.md  v1.5-MILESTONE-AUDIT.md  v1.5-REQUIREMENTS.md  v1.5-ROADMAP.md  v1.7-MILESTONE-AUDIT.md  v1.7-REQUIREMENTS.md  v1.7-ROADMAP.md  v1.8-MILESTONE-AUDIT.md  v1.8-REQUIREMENTS.md  v1.8-ROADMAP.md  v1.9-MILESTONE-AUDIT.md  v1.9-REQUIREMENTS.md  v1.9-ROADMAP.md
.planning/phases/01-foundation/: 01-01-PLAN.md  01-02-PLAN.md  01-VERIFICATION.md
.planning/phases/02-indexing-pipeline/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-VERIFICATION.md
.planning/phases/03-search/: 03-02-SUMMARY.md  03-03-SUMMARY.md  03-RESEARCH.md  03-VERIFICATION.md
.planning/phases/04-index-management/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-03-PLAN.md  04-03-SUMMARY.md  04-CONTEXT.md
.planning/phases/04-search-and-output-integration/: 04-01-PLAN.md  04-02-PLAN.md  04-02-SUMMARY.md  04-CONTEXT.md  04-VERIFICATION.md
.planning/phases/05-test-infrastructure/: 05-01-PLAN.md  05-02-PLAN.md  05-03-PLAN.md  05-03-SUMMARY.md  05-CONTEXT.md  05-RESEARCH.md  05-VERIFICATION.md
.planning/phases/06-test-coverage/: 06-01-SUMMARY.md  06-RESEARCH.md  06-VERIFICATION.md
.planning/phases/07-documentation/: 07-01-PLAN.md  07-02-PLAN.md  07-02-SUMMARY.md  07-03-PLAN.md
.planning/phases/08-custom-language-definitions-and-file-routing/: 08-RESEARCH.md
.planning/phases/10-flow-integration-and-schema/: 10-CONTEXT.md  10-RESEARCH.md  (+1 more)
.planning/research/: ARCHITECTURE-v1.9-multi-repo.md  ARCHITECTURE.md  ARCHITECTURE_SEARCH_ENHANCEMENTS.md  FEATURES.md  FEATURES_DOCKER_TESTING.md  FEATURES_v1.8.md  PITFALLS-docker-integration-tests.md  PITFALLS-search-enhancements.md  PITFALLS.md  STACK-v1.9.md  STACK.md  SUMMARY.md
docker/: .dockerignore  Dockerfile
docs/: adding-languages.md  architecture.md  cli-reference.md  dogfooding.md  how-it-works.md  mcp-configuration.md  mcp-tools.md  retrieval.md  search-features.md
docs/plans/: 2026-02-18-chat-enhancements-design.md  2026-02-18-chat-enhancements-plan.md  2026-02-18-search-chat-integration-design.md  2026-02-18-search-chat-integration-plan.md
scripts/: sync_skills.sh  verify_setup.py
skills/: README.md
skills/coco-debugging/: SKILL.md
skills/coco-explain/: SKILL.md
skills/coco-new-feature/: SKILL.md
skills/coco-onboarding/: SKILL.md
skills/coco-quickstart/: SKILL.md
skills/coco-refactoring/: SKILL.md
skills/cocosearch-add-grammar/: SKILL.md
skills/cocosearch-add-language/: SKILL.md
skills/cocosearch-commit/: SKILL.md
skills/cocosearch-debugging/: SKILL.md
skills/cocosearch-deps/: SKILL.md
skills/cocosearch-explain/: SKILL.md
skills/cocosearch-explore/: SKILL.md
skills/cocosearch-new-feature/: SKILL.md
skills/cocosearch-onboarding/: SKILL.md
skills/cocosearch-quickstart/: SKILL.md
skills/cocosearch-refactoring/: SKILL.md
skills/cocosearch-review-pr/: SKILL.md
skills/cocosearch-subway/: SKILL.md
src/cocosearch/: __init__.py  auto_reindex.py  cli.py  client.py  exceptions.py  hooks.py  logging.py  ts_parsers.py  validation.py  watch.py
tests/: README.md  __init__.py  conftest.py  test_cli.py  test_hybrid_symbol_filter.py
tests/fixtures/: __init__.py  containers.py  data.py  db.py  ollama.py  ollama_integration.py
tests/indexer/: test_config.py  test_embedder.py  test_flow.py  test_metadata.py  test_progress.py
tests/integration/: conftest.py  test_context_e2e.py  test_e2e_devops.py  test_e2e_indexing.py  test_e2e_search.py  test_hybrid_schema.py  test_hybrid_search_e2e.py  test_ollama.py  test_postgresql.py
tests/management/: __init__.py  test_git.py  test_stats.py
tests/mcp/: test_server.py
tests/mocks/: db.py  ollama.py
tests/search/: test_db.py  test_formatter.py  test_query.py
tests/unit/: conftest.py  test_auto_reindex.py  test_cli.py  test_cli_client_mode.py  test_cli_config_check.py  test_cli_config_integration.py  test_cli_init.py  test_client.py  test_db_mocks.py  test_hooks.py  test_hybrid_search.py  test_indexer_flow.py  test_logging.py  test_ollama_mocks.py  test_query_analyzer.py  test_search_query.py  test_ts_parsers.py  test_tsvector.py  test_watch.py
(+384 files in other folders)
